services/echoserver/ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
     more_set_headers "Request-Id: $request_id";
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  # tls:
  # - hosts:
  #   - echo.example.com
  #   secretName: echoserver-tls
  rules:
  - host: echo.YOURIP.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
