services/echoserver/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
     more_set_headers "Request-Id: $request_id";
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - echo.YOURIP.nip.io 
    secretName: echo.YOURIP.nip.io-tls
  rules:
  - host: echo.YOURIP.nip.io 
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
